@@ -458,6 +458,16 @@ class tx_ncstaticfilecache {
 				}
 				t3lib_div::writeFile(PATH_site . $cacheDir . $file, $content);
 
+				if ($this->configuration['enableStaticFileCompression']) {
+					$level = $GLOBALS['TYPO3_CONF_VARS']['FE']['compressionLevel'] ? $GLOBALS['TYPO3_CONF_VARS']['FE']['compressionLevel'] : 3;
+					$contentGzip = gzencode($content, $level);
+					if ($contentGzip) {
+						t3lib_div::writeFile(PATH_site . $cacheDir . $file . '.gz', $contentGzip);
+					}
+					unset($contentGzip);
+					unset($level);
+				}
+				
 				// Check for existing entries with the same uid and file, if a
 				// record exists, update timestamp, otherwise create a new record.
 				$rows = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows(
