@@ -1,74 +1,0 @@
-# Enable URL rewriting
-RewriteEngine On
-
-# Stop rewrite processing if we are in the typo3/ directory
-# For httpd.conf, use this line instead of the next one:
-# RewriteRule ^/TYPO3root/(typo3|typo3temp|typo3conf|t3lib|tslib|fileadmin|uploads|showpic\.php)/ - [L]
-
-RewriteRule ^(typo3|typo3temp|typo3conf|t3lib|tslib|fileadmin|uploads|showpic\.php)/ - [L]
-
-# Redirect http://mysite/typo3 to http://mysite/typo3/index_re.php
-# and stop the rewrite processing
-# For httpd.conf, use this line instead of the next one:
-# RewriteRule ^/TYPO3root/typo3$ /TYPO3root/typo3/index.php [L]
-RewriteRule ^typo3$ typo3/index_re.php [L]
-
-#------------------------------------------------------------------------------
-# beginning of static file cache ruleset
-
-# Don't pull *.xml, *.css etc. from the cache
-RewriteCond %{REQUEST_FILENAME} !^.*\.xml$
-RewriteCond %{REQUEST_FILENAME} !^.*\.css$
-
-# Check for Ctrl Shift reload
-RewriteCond %{HTTP:Pragma} !no-cache
-RewriteCond %{HTTP:Cache-Control} !no-cache
-
-# Don't cache HTTPS traffic by default. You may choose to comment out this
-# option if your site runs fully on https. If your site runs mixed, you will
-# not want https traffic to be cached in the same typo3temp folder where it can
-# be requested over http.
-# Enable this if you use a mixed setup.
-#RewriteCond %{HTTPS} off
-
-# NO backend user is logged in. Please note that the be_typo_user expires at the
-# end of the browser session. So, although you have already logged out of the
-# backend, you will still have to either restart your browser or remove the
-# cookie manually for this rule to work.
-RewriteCond %{HTTP_COOKIE} !be_typo_user [NC]
-
-# NO frontend user is logged in. Logged in frontend users may see different
-# information than anonymous users. But the anonymous version is cached. So
-# don't show the anonymous version to logged in frontend users.
-RewriteCond %{HTTP_COOKIE} !nc_staticfilecache [NC]
-
-# We only redirect GET requests
-RewriteCond %{REQUEST_METHOD} GET
-
-# We only redirect URI's without query strings
-RewriteCond %{QUERY_STRING} ^$
-
-# We only redirect if a cache file actually exists
-
-# Uncomment the following two lines if you use realurl:
-#RewriteCond %{DOCUMENT_ROOT}/typo3temp/tx_ncstaticfilecache/%{HTTP_HOST}/%{REQUEST_URI}index.html -f
-#RewriteRule .* typo3temp/tx_ncstaticfilecache/%{HTTP_HOST}/%{REQUEST_URI} [L]
-
-# Uncomment the following two lines if you use simulateStaticDocuments:
-#RewriteCond %{DOCUMENT_ROOT}/typo3temp/tx_ncstaticfilecache/%{HTTP_HOST}/%{REQUEST_URI}/index.html -f
-#RewriteRule .* typo3temp/tx_ncstaticfilecache/%{HTTP_HOST}/%{REQUEST_URI}/index.html [L]
-
-# end of static file cache ruleset
-#------------------------------------------------------------------------------
-
-
-
-# If the file/symlink/directory does not exist => Redirect to index.php
-# Important note: If you copy/paste this into httpd.conf instead
-# of .htaccess you will need to add '%{DOCUMENT_ROOT}' left to each
-# '%{REQUEST_FILENAME}' part.
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-l
-
-RewriteRule .* index.php [L]
