@@ -1,0 +1,48 @@
+# Enable URL rewriting
+RewriteEngine On
+
+# Do not rewrite any static resources
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d [OR]
+RewriteCond %{REQUEST_FILENAME} -l
+RewriteRule .* - [L]
+
+#------------------------------------------------------------------------------
+# beginning of static file cache ruleset
+
+# Don't cache HTTPS traffic. You may choose to comment out this
+# option if your site runs fully on https. If your site runs mixed, you will
+# not want https traffic to be cached in the same typo3temp folder where it can
+# be requested over http.
+# Enable this if you use a mixed setup.
+#RewriteCond %{HTTPS} off
+
+# We only redirect URI's without query strings
+RewriteCond %{QUERY_STRING} ^$
+
+# It only makes sense to do the other checks if a static file actually exists.
+RewriteCond %{DOCUMENT_ROOT}/typo3temp/tx_ncstaticfilecache/%{HTTP_HOST}/%{REQUEST_URI}index.html -f
+
+# NO frontend user is logged in. Logged in frontend users may see different
+# information than anonymous users. But the anonymous version is cached. So
+# don't show the anonymous version to logged in frontend users.
+RewriteCond %{HTTP_COOKIE} !nc_staticfilecache [NC]
+
+# We only redirect GET requests
+RewriteCond %{REQUEST_METHOD} GET
+
+# NO backend user is logged in. Please note that the be_typo_user cookie expires at the
+# end of the browser session. If you have logged out of the TYPO3 backend and are expecting to see cached pages but don't. Please close this browser settion first or remove the cookie manually or use another browser to hit your frontend.
+RewriteCond %{HTTP_COOKIE} !be_typo_user [NC]
+
+# Check for Ctrl Shift reload
+RewriteCond %{HTTP:Pragma} !no-cache
+RewriteCond %{HTTP:Cache-Control} !no-cache
+
+# Rewrite the request to the static file.
+RewriteRule .* typo3temp/tx_ncstaticfilecache/%{HTTP_HOST}/%{REQUEST_URI}/index.html [L]
+
+# end of static file cache ruleset
+#------------------------------------------------------------------------------
+
+RewriteRule .* index.php [L]
